# neptune-sklearn

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/actions/e2e/: action.yml
.github/workflows/: ci.yml  pre-commit.yml  publish.yml
neptune_sklearn/: _version.py
neptune_sklearn/impl/: __init__.py
src/neptune_sklearn/: __init__.py  _version.py
src/neptune_sklearn/impl/: __init__.py  version.py
tests/: conftest.py  test_e2e.py
